# robinhood-ai-trading-bot

./: .clinerules-architect  .clinerules-debug  .coverage  .env.test  .gitignore  Activepieces_Docker_Instructions.md  Implementation_and_Analytics_Roadmap.md  MCP_SERVERS_README.md  Master_Architecture.md  README.md  Scaling_and_Optimization.md  __init__.py  build.py  config.py  config.py.example  debugging_timeout_framework_plan.md  decorator_integration_plan.md  docker-compose.yml  dump.rdb  env_check.py  firecrawl_mcp_example.py  fix_gemini_globals_session_plan.md  fix_workspace_diagnostics_plan.md  install_all_dependencies.sh  launch.json  main.py  mcp_servers.json  mock_solution.py  original plan.md  prometheus.yml  pyproject.toml  pytest.ini  reload_mcp_settings.sh  repomix.json  repomix_mcp_example.py  requirements.txt  restart_all_mcp.sh  run_backtest.py  security_scan.py  setup.py  (+7 more)
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
Documents/: Autonomous_Trading_System_Project_Plan.md  IMPORTANT_DO_NOT_DELETE_autonomous_trading_system_master_architecture.md  README.md  Upgrades.md  autonomous_crypto_trading_blueprint.md  autonomous_trading_system_foundation.md  autonomous_trading_system_master_architecture.md  core_engine_design.md  crypto_market_analysis_architecture.md  crypto_market_analysis_next_phase.md  crypto_market_analysis_plan.md  data_handling_review_plan.md  debugging_timeout_framework_plan.md  fix_build_py_plan.md  fix_robinhood_account_dividends_plan.md  fix_workspace_diagnostics_env_plan.md  git_cleanup_plan.md  problem-solving-strategy.md  test_consolidation_plan.md  unstoppable_engine_next_phase.md  unstoppable_engine_scaling_plan.md  unstoppable_trading_engine_journal.md  workspace_diagnostics_analysis.md
documentation/: data_handling_review.md  system_architecture.md
memory-bank/: Elite_AI_Trading_Agent_Enhancement_Plan.md  Elite_AI_Trading_Agent_Strategies_and_Roadmap.md  README.md  README_overhaul_draft.md  Upgrades.md  activeContext.md  adaptive_learning_architecture.md  adaptive_learning_augmentation_plan.md  ai_model_architecture.md  ai_model_development_plan.md  ai_model_optimization_and_deployment_detailed_steps.md  ai_model_optimization_and_deployment_plan.md  ai_model_optimization_architecture.md  ai_model_optimization_phase2_plan.md  ai_trading_system_a3_architecture.md  analysis_plan.md  architecture_expanded_plan.md  auto_modular_refactoring_analysis.md  auto_modular_refactoring_expanded_plan.md  cleanup_execution_plan.md  (+61 more)
(+213 files in other folders)
