[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "robinhood-ai-trading-bot"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "AI-powered trading bot for Robinhood"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.dependencies]
redis = ">=4.0.0"
torch = ">=2.2.0"
ray = ">=2.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest-asyncio]
loop_policy = "function"
asyncio_default_fixture_loop_scope = "function"
