[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "robinhood-ai-trading-bot"
version = "0.1.0"
authors = [
    {name = "User", email = "user@email.com"},
]
description = "AI-powered trading bot for Robinhood"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "trading", "robinhood", "bot", "reinforcement-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "redis==5.0.4",
    "torch==2.2.2",
    "ray==2.44.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
robinbot = "your_module.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest-asyncio]
loop_policy = "function"
asyncio_default_fixture_loop_scope = "function"
